@@ -352,6 +352,8 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_intro_wrap span		{font-size:1.0em; color:#000; padding-right:0; font-weight:bold;}
 .search_intro_wrap span:hover	{border-bottom:1px solid #000; cursor:pointer;}
 
+.press_enter 				{color:#000; position:absolute; right:20px; top:32px; font-size:20px;}	/*	Press Enter div in input box	*/
+
 
 /*	For url #view=search2 - Explore styles
 	============================================= */
