@@ -360,6 +360,8 @@ a#search_link.search_link_disable:hover	{cursor:default;}
 .search_intro_wrap			{width:960px; margin:0 auto; margin-top:40px; color:#fff; font-size:20px; line-height:26px;}
 .search_intro_wrap span		{font-size:1.0em; color:#6ecaff; padding-right:0;}
 .search_intro_wrap span:hover	{border-bottom:1px solid #6ecaff; cursor:pointer;}
+
+.press_enter 				{color:#ccc; position:absolute; right:20px; top:32px; font-size:20px;}	/*	Press Enter div in input box	*/
 	
 	
 /*	For url #view=search2 - Explore styles
