@@ -305,7 +305,7 @@ view_search.fixup=function()
 		"view_search_select_status":true,
 	};
 
-	var o={allow_single_deselect:true,search_contains:true,placeholder_text_multiple:"Select one or multiple options"};
+	var o={allow_single_deselect:true,search_contains:true,placeholder_text:"Select an option",placeholder_text_multiple:"Select one or multiple options"};
 	for(var n in search_select_ids)
 	{
 		$("#"+n).chosen(o).change(build_query);
