@@ -517,6 +517,9 @@ Generator - 小工具为您的网站
 #footer19_text
 Github的反馈论坛
 
+#^footer20_text
+数据库日志
+
 #read_more_text
 阅读全文
 
@@ -919,7 +922,7 @@ IATI出版社
 年
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 文本搜索
