@@ -517,6 +517,9 @@ Attribution &amp; Sources
 #footer19_text
 Github Feedback Forum
 
+#^footer20_text
+Database Logs
+
 #read_more_text
 About data quality and why it matters
 
@@ -952,7 +955,7 @@ Publisher
 Year Range
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 Text Search
