@@ -517,6 +517,9 @@ Attribution et Sources
 #footer19_text
 Feedback Forum Github
 
+#^footer20_text
+Journal des données
+
 #read_more_text
 Lire la suite
 
@@ -921,7 +924,7 @@ Editeur
 An
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 Recherche texte
