@@ -71,6 +71,7 @@
 		<li><a href="http://d-portal.org/about.html">{footer_about_text}</a></li>
 		<li><a href="http://d-portal.org/ctrack.html?#view=dash">{footer14_text}</a></li>
 		<li><a href="http://d-portal.org/ctrack.html#view=generator">{footer15_text}</a></li>
+		<li><a href="https://xriss.github.io/D-Portal-Logs/">{footer20_text}</a></li>
 	</ul>
 	<div class="footer_header">{footer16_text}</div>
 	<ul>
@@ -194,7 +195,7 @@
 
 #main_head_tail_settings
 		<td class="settings_toggle">
-			<a href="http://d-portal.org/faq.html" class="settings_faq">FAQ</a><a href="#" onclick="$('#settings').toggle();" class="settings_link">
+			<a href="http://d-portal.org/faq.html" class="settings_faq">FAQ</a><a href="#" onclick="event.preventDefault();$('#settings').toggle();" class="settings_link">
 				<span>{change_settings_text}</span><img src="{flava}settings.png" width="35" height="35"/>
 			</a>
 		</td>
