@@ -514,6 +514,9 @@ Generator - अपनी वेबसाइट के लिए विजेट
 #footer19_text
 Github प्रतिक्रिया फोरम
 
+#^footer20_text
+डाटाबेस लॉग्स
+
 #read_more_text
 और अधिक पढ़ें
 
@@ -918,7 +921,7 @@ IATI प्रकाशक
 साल
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 पाठ्य खोज
