@@ -517,6 +517,9 @@ Generator - あなたのウェブサイトのためのウィジェット
 #footer19_text
 Githubのフィードバックフォーラム
 
+#^footer20_text
+データベースログ
+
 #read_more_text
 続きを読む
 
@@ -921,7 +924,7 @@ IATI出版
 年
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 テキスト検索
