@@ -514,6 +514,9 @@ Atribución y Fuentes
 #footer19_text
 Foro de sugerencias Github
 
+#^footer20_text
+Registros de la base de datos
+
 #read_more_text
 Leer más
 
@@ -918,7 +921,7 @@ Editor
 Año
 
 #search_view_txt
-DISCOVER
+EXPLORE
 
 #search_text_txt
 Búsqueda de texto
