@@ -201,6 +201,7 @@ Please select <b>ONE</b> recipient and <b>NO</b> publisher to generate content h
 
 #reminder
 <div class="reminder_wrap">
+	<p><b>Are you creating widgets for a company's internal website?</b> Use the <a href="https://d-portal.org/ctrack.html#view=generator">secured version Generator</a> instead.</p>
 	<p>Compare multiple datasets by choosing multiple RECIPIENTS and/or PUBLISHERS.</p>
 	<p>Picking both PUBLISHER and RECIPIENT data at the same time will limit the data in your generated content.</p>
 	<p>The SIZE option allows you to generate a variety of blog-friendly sized content.</p>
