@@ -119,11 +119,35 @@
 	
 	{view_search3_filters_wrap}
 
-	<div id="search_div"><span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button0_txt}</a></div>
+	<div id="search_div">
+		<span id="addfilter_span"></span><span id="result_span"></span><a id="search_link" class="search_link_disable">{search_button0_txt}</a> <!--Update to button1, translations-->
+	</div>
 	
-	<div id="result_aid_div"><span id="result_aid_link"></span></div>
+	<div id="result_aid_div">
+		<span id="result_aid_link"></span>
+	</div>
 	
-	<div class="search_input_wrap"><div class="search_icon"><img src="/ctrack/art/original/search_icon.png" width="30" height="30"/></div><input type="text" id="view_search_string" class="typeahead explore" placeholder="{search_placeholder_txt}"/></div>
+	<div class="search_input_wrap">
+		<div class="search_icon">
+			<img src="/ctrack/art/original/search_icon.png" width="30" height="30"/>
+		</div><input type="text" id="view_search_string" class="typeahead explore" placeholder="{search_placeholder_txt}" autocomplete="off"/>
+		<div class="press_enter"></div>
+		<script>
+			$('.typeahead.explore').keyup(function(event) {
+			
+			  $('.press_enter').text("Press Enter");
+			  
+			  if( $(this).val().length === 0 )
+				{
+					$('.press_enter').hide();
+				}
+			else
+				{
+					$('.press_enter').show();
+				}		 
+			});
+		</script>
+	</div>
 	
 </div>
 
