@@ -198,9 +198,10 @@ a.top.faq:hover		{border-top:5px solid #2BF26C;}
 	============================================= */
 
 .faq_head				{font-size:38px; position:absolute; top:0; left:0; padding:40px 0 40px 100px; color:#FFF; width:860px;}
-.faq_head.a				{background-color:#2BF26C;}
-.faq_head.b				{background-color:#FF980A;}
-.faq_head.c				{background-color:#7BC2FF;}
+.faq_head.a				{background-color:#2BF26C;}	/*	General section	*/
+.faq_head.b				{background-color:#FF980A;} /*	Technical section	*/
+.faq_head.c				{background-color:#7BC2FF;} /*	EXPLORE section	*/
+.faq_head.d				{background-color:#0023dc;} /*	Generator section	*/
 
 .navi.clear				{background-color:transparent; position:initial;}
 .about_wrap.faq			{background-color:transparent; padding:40px 0;}
@@ -214,15 +215,18 @@ a.top.faq:hover		{border-top:5px solid #2BF26C;}
 ul.faq_list				{padding-left:60px;}
 ul.faq_list li			{font-size:1.2em; font-weight:bold; line-height:1.2em; padding-bottom:10px; list-style-type:decimal;}
 
-a.topics				{display:inline-block; padding:20px; color:#FFF; background-color:#2CE268; vertical-align:top; width:310px; box-sizing:border-box; text-align:center; border-radius:8px 8px 0 0; font-size:1.8em;}
-a.topics.a:hover		{background-color:#2BF26C;}
-a.topics.b				{margin-left:15px; margin-right:15px; background-color:#FF860E;}
-a.topics.b:hover		{background-color:#FF980A;}
+a.topics				{display:inline-block; padding:20px; color:#FFF; background-color:#2CE268; vertical-align:top; width:228px; box-sizing:border-box; text-align:center; border-radius:8px 8px 0 0; font-size:1.8em;}
+a.topics.a:hover		{background-color:#4eff88;}
+a.topics.b				{margin-left:16px; margin-right:16px; background-color:#FF860E;}
+a.topics.b:hover		{background-color:#ffa72e;}
 a.topics.c				{background-color:#53AEFF;}
 a.topics.c:hover		{background-color:#7BC2FF;}
+a.topics.d				{margin-right:16px; background-color:#001caf;}
+a.topics.d:hover		{background-color:#2543e0;}
 a.topics.a.on			{background-color:#2BF26C;}
 a.topics.b.on			{background-color:#FF980A;}
 a.topics.c.on			{background-color:#7BC2FF;}
+a.topics.d.on			{background-color:#0023dc;}
 a.topics:hover			{-webkit-transition:all .2s ease-in-out; -moz-transition:all .2s ease-in-out; -o-transition:all .2s ease-in-out; -ms-transition:all .2s ease-in-out; transition:all .2s ease-in-out; cursor:pointer;}
 
 span.info				{display:block; color:#444; font-size:0.8em; line-height:1.4em; font-weight:normal; padding:10px 40px 40px 5px;}
