@@ -164,6 +164,9 @@ Attribution &amp; Sources
 #^footer19_text
 Github Feedback Forum
 
+#^footer20_text
+Database Logs
+
 #^feedback_title_text
 d-portal.org Feedback
 
