@@ -34,6 +34,7 @@
 		<li><a href="http://d-portal.org/about.html">{about_title_text}</a></li>
 		<li><a href="http://d-portal.org/ctrack.html?#view=dash">{footer14_text}</a></li>
 		<li><a href="http://d-portal.org/ctrack.html#view=generator">{footer15_text}</a></li>
+		<li><a href="https://xriss.github.io/D-Portal-Logs/">{footer20_text}</a></li>
 	</ul>
 	<div class="footer_header">{footer16_text}</div>
 	<ul>
