@@ -181,6 +181,9 @@ Generator - 小工具为您的网站
 #^footer19_text
 Github的反馈论坛
 
+#^footer20_text
+数据库日志
+
 #^feedback_title_text
 d-portal.org反馈
 
