@@ -180,6 +180,9 @@ Attribution et Sources
 #^footer19_text
 Feedback Forum Github
 
+#^footer20_text
+Journal des données
+
 #^feedback_title_text
 d-portal.org réaction
 
