@@ -180,6 +180,9 @@ Generator - अपनी वेबसाइट के लिए विजेट
 #^footer19_text
 Github प्रतिक्रिया फोरम
 
+#^footer20_text
+डाटाबेस लॉग्स
+
 #^feedback_title_text
 d-portal.org प्रतिक्रिया
 
