@@ -181,6 +181,9 @@ Generator - あなたのウェブサイトのためのウィジェット
 #^footer19_text
 Githubのフィードバックフォーラム
 
+#^footer20_text
+データベースログ
+
 #^feedback_title_text
 d-portal.org フィードバック
 
