@@ -181,6 +181,9 @@ Atribución y Fuentes
 #^footer19_text
 Foro de sugerencias Github
 
+#^footer20_text
+Registros de la base de datos
+
 #^feedback_title_text
 d-portal.org Feedback
 
