@@ -1,3 +1,10 @@
+Static site (2017-09-01 shi)
+==============================
+Updated FAQ with Explorer section
+Updated FAQ styles
+Updated FAQ Generator section with https info
+
+
 Static site (2017-06-22 shi)
 ==============================
 Updated FAQ with gen13
