@@ -1,3 +1,12 @@
+Development Portal (2017-09-01 shi)
+==============================
+Updated footer with D-Portal-Logs link
+Added https info and link to Generator page
+Updated translations for new footer link
+Fix settings link
+Updated search_view_text in translations 
+
+
 Development Portal (2017-08-31 shi)
 ==============================
 Updated search2 intro and information text
